--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,35 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 #content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
+  padding: 50px 50px 20px 50px;
   height: 100vh;
 
   background-image: linear-gradient(
       to right bottom,
-      rgba(0, 0, 0, 0.925),
-      rgba(0, 0, 0, 0.671)
+      rgba(0, 0, 0, 0.938),
+      rgba(0, 0, 0, 0.705)
     ),
     url(../img/sunny.jpg);
+  background-size: cover;
 }
 
 /*-- Search Box --*/
 
 .search-box {
   height: 60px;
-  background: #f1ae2c;
+  background: #35df91;
   line-height: 40px;
   padding: 10px;
   border-radius: 60px;
 }
 .search-input {
-  background: #f1ae2c;
+  background: #35df91;
   color: #141f2b;
   outline: none;
   border: none;
@@ -45,7 +52,7 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  background: #f1ae2c;
+  background: #35df91;
   padding: 12px;
   border-radius: 50%;
   float: right;
@@ -67,8 +74,132 @@
   background: #fff;
 }
 
+::placeholder {
+  color: #141f2b9d;
+  opacity: 1;
+}
+
+/*-- Toggle Units --*/
+
+input[type='checkbox'] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 25px;
+  background: #33a9fe;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: #0072c4;
+}
+
+input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 22.5;
+}
+
 /*-- Weather Card --*/
 
 .card {
+  margin-top: 45px;
+  row-gap: 5px;
+  font-size: 20px;
+  border-radius: 10px;
   color: #fff;
+  background-color: rgba(10, 16, 22, 0.555);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  height: fit-content;
+}
+
+.city {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 800;
+  background-color: #35df91;
+  color: #141f2b;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.description {
+  text-transform: capitalize;
+}
+
+.temp-convert {
+  font-weight: 100;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather-data {
+  margin-top: 10px;
+  display: flex;
+  column-gap: 20px;
+}
+
+table,
+th,
+td {
+  border-collapse: collapse;
+  padding: 10px;
+  text-align: center;
+  font-size: 15px;
+}
+
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.data-titles {
+  font-weight: 900;
+  color: #f3af2d;
+}
+.data-items {
+  font-weight: 400;
+}
+
+/*-- Footer --*/
+
+footer {
+  margin-top: auto;
+  color: #ffffff65;
+}
+
+img {
+  margin: 10px;
+  width: 90px;
+  height: 90px;
 }
