--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,12 +14,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 50px 20px 50px;
+  padding: 60px 50px 20px 50px;
   height: 100vh;
 
   background-image: linear-gradient(
       to right bottom,
-      rgba(0, 0, 0, 0.938),
+      rgba(0, 0, 0, 0.829),
       rgba(0, 0, 0, 0.705)
     ),
     url(../img/sunny.jpg);
@@ -34,6 +34,9 @@ body {
   line-height: 40px;
   padding: 10px;
   border-radius: 60px;
+
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.63);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.63);
 }
 .search-input {
   background: #35df91;
@@ -90,9 +93,10 @@ input[type='checkbox'] {
 label {
   cursor: pointer;
   text-indent: -9999px;
-  width: 50px;
-  height: 25px;
-  background: #33a9fe;
+  width: 60px;
+  height: 30px;
+  background: none;
+  border: 2px solid #35df91;
   display: block;
   border-radius: 100px;
   position: relative;
@@ -101,22 +105,25 @@ label {
 label:after {
   content: '';
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 3px;
+  left: 5.5px;
   width: 15px;
   height: 15px;
-  background: #fff;
-  border-radius: 90px;
+  background: none;
+  border: 2px solid #e94f2f;
+  border-radius: 100px;
   transition: 0.3s;
 }
 
 input:checked + label {
-  background: #0072c4;
+  background: none;
+  border: 2px solid #e94f2f;
 }
 
 input:checked + label:after {
   left: calc(100% - 5px);
   transform: translateX(-100%);
+  border: 2px solid #35df91;
 }
 
 label:active:after {
@@ -137,6 +144,9 @@ label:active:after {
   align-items: center;
   width: 250px;
   height: fit-content;
+
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.63);
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.63);
 }
 
 .city {
@@ -158,9 +168,9 @@ label:active:after {
   font-weight: 100;
   display: flex;
   flex-direction: column;
-  row-gap: 10px;
   align-items: center;
   justify-content: center;
+  row-gap: 10px;
 }
 
 .weather-data {
@@ -191,15 +201,35 @@ table.center {
   font-weight: 400;
 }
 
+.data-items i {
+  color: #e94f2f;
+  margin-right: 2px;
+  font-size: small;
+}
+
 /*-- Footer --*/
 
 footer {
   margin-top: auto;
-  color: #ffffff65;
+  color: rgba(255, 255, 255, 0.63);
+  background: #000;
+  padding: 10px 15px 10px 15px;
+  border-radius: 20px;
+}
+
+footer i {
+  color: rgb(233, 79, 47);
+  margin-left: 5px;
+  transition: 0.7s;
+}
+
+footer i:hover {
+  transform: rotate(360deg) scale(1.3);
+  color: rgb(255, 113, 31);
 }
 
 img {
-  margin: 10px;
+  margin-top: 15px;
   width: 90px;
   height: 90px;
 }
